--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "telemanas-mock-api",
+  "name": "telemanas-scraper",
   "version": "1.0.0",
-  "description": "Mock API for Tele MANAS dashboard endpoints",
+  "description": "Tele MANAS scraper with advanced API calling logic and mock API server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "scrape": "node examples/basic-scraper.js",
+    "test-api": "node test-api.js",
+    "test-scraper": "node examples/test-scraper.js"
   },
   "dependencies": {
     "express": "^4.18.2",
