updated whole app
updated whole app

--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "telemanas-scraper",
+  "name": "telemanas-api-proxy",
   "version": "1.0.0",
-  "description": "Tele MANAS scraper with advanced API calling logic and mock API server",
+  "description": "Simple API proxy for Tele MANAS endpoints",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "scrape": "node examples/basic-scraper.js",
-    "test-api": "node test-api.js",
-    "test-scraper": "node examples/test-scraper.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["telemanas", "mock", "api", "dashboard"],
+  "keywords": ["telemanas", "api", "proxy"],
   "author": "Kaya Guides",
   "license": "MIT"
 }
